--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,20 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@redwoodjs/auth": "0.41.0",
     "@redwoodjs/forms": "0.41.0",
     "@redwoodjs/router": "0.41.0",
     "@redwoodjs/web": "0.41.0",
     "prop-types": "15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "postcss-loader": "^6.2.1",
+    "tailwindcss": "^3.0.12"
   }
 }
